Fix multi-select layout break / lack of growth when resizing form dialog

--- a/Resources/styles/dataManager.element.scss
+++ b/Resources/styles/dataManager.element.scss
@@ -197,6 +197,10 @@
     margin-bottom: 10px;
   }
 
+  span.select2-container {
+    display: block;
+    width: auto !important; // overrule inline style
+  }
 }
 
 .data-manager-datepicker {
